Fix loader z-index

--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 
   .q-loading-animation {
     width: 1.5rem;
